--- a/conf/magpie.proxy.log4j.properties
+++ b/conf/magpie.proxy.log4j.properties
@@ -1,5 +1,5 @@
 ### set log levels ###
-log4j.rootLogger=ERROR, stdout
+log4j.rootLogger=ERROR, stdout, file
 log4j.logger.com.jd.bdp.magpie=DEBUG
 
 ### stdout ###
@@ -12,7 +12,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %c{1} [%p
 ### file ###
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.Threshold=INFO
-log4j.appender.file.File=balance.log
+log4j.appender.file.File=${magpie.proxy.home}/logs/magpie-proxy.log
 log4j.appender.file.Append=true
 log4j.appender.file.DatePattern='.'yyyy-MM-dd
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
